--- a/TVShowWEB/Content/bootstrap.css
+++ b/TVShowWEB/Content/bootstrap.css
@@ -6881,7 +6881,10 @@ td.visible-print {
 
 /*Tabela ---------------*/
 .TvShowTable {
-	margin:0px;padding:0px;
+    overflow-y:auto;
+    height:75vh;
+	margin:0px;
+    padding:0px;
 	width:100%;
 	border:1px solid #17181b;
 	
@@ -6904,7 +6907,7 @@ td.visible-print {
     border-collapse: collapse;
         border-spacing: 0;
 	width:100%;
-	height:100%;
+	
 	margin:0px;padding:0px;
 }.TvShowTable tr:last-child td:last-child {
 	-moz-border-radius-bottomright:4px;
@@ -7071,3 +7074,7 @@ select {
     height: 50px !important;
  
 }
+table {
+    table-layout:fixed;
+}
+/*scrollbar*/
