--- a/TVShowWEB/Views/Shared/_Layout.cshtml
+++ b/TVShowWEB/Views/Shared/_Layout.cshtml
@@ -8,7 +8,6 @@
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/base/css")
     @Scripts.Render("~/bundles/modernizr")
-   
     @Scripts.Render("~/bundles/jquery")
    
    
@@ -42,9 +41,9 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        @*<footer>
             <p>&copy; @DateTime.Now.Year - TV Show Tracker</p>
-        </footer>
+        </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
